--- a/package.json
+++ b/package.json
@@ -6,17 +6,28 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "format": "prettier --write ."
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@babel/plugin-transform-runtime": "^7.12.1",
     "@react-native-community/cli": "15.1.0",
     "@react-native-community/masked-view": "0.1.11",
     "@react-navigation/native": "7.0.0",
     "@react-navigation/stack": "7.0.0",
     "base-64": "1.0.0",
+    "body-parser": "^1.19.0",
     "expo": "^52.0.30",
-    "firebase": "11.0.1",
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "express-validator": "^7.2.1",
+    "firebase": "^11.0.1",
+    "joi": "^17.3.0",
+    "md5": "^2.3.0",
+    "mongoose": "^8.8.0",
+    "morgan": "^1.10.0",
+    "prop-types": "^15.7.2",
+    "pug": "^3.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.6",
@@ -24,12 +35,31 @@
     "react-native-keyboard-aware-scroll-view": "0.9.5",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-web": "0.19.13"
+    "react-native-screens": "^4.6.0",
+    "react-native-web": "0.19.13",
+    "serve-favicon": "^2.5.0",
+    "simple-env-config": "^1.0.1",
+    "styled-components": "^6.1.0",
+    "webpack": "^5.61.0",
+    "webpack-cli": "^5.1.4"
   },
   "devDependencies": {
     "@babel/core": "7.26.0",
-    "babel-preset-expo": "~12.0.0"
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.1",
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "async": "^3.2.0",
+    "babel-loader": "^9.0.1",
+    "babel-preset-expo": "~12.0.0",
+    "chai": "^5.1.2",
+    "cross-env": "^7.0.2",
+    "mocha": "^10.1.0",
+    "nodemon": "^3.0.1",
+    "prettier": "^3.4.2",
+    "react-router": "^6.4.3",
+    "react-router-dom": "^6.4.3",
+    "should": "^13.2.3",
+    "superagent": "^10.1.1"
   },
   "private": true,
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
