--- a/app.json
+++ b/app.json
@@ -5,9 +5,9 @@
     "platforms": ["ios", "android", "web"],
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/trophy.png",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/trophy.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -19,6 +19,7 @@
       "supportsTablet": true
     },
     "description": "Built by the team behind https://www.instamobile.io https://www.iosapptemplates.com https://www.instaflutter.com and https://www.instakotlin.com",
-    "githubUrl": "https://github.com/instamobile/react-native-firebase"
+    "githubUrl": "https://github.com/instamobile/react-native-firebase",
+    "newArchEnabled": true
   }
 }
