--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@babel/plugin-transform-runtime": "^7.12.1",
     "@react-native-community/cli": "15.1.0",
     "@react-native-community/masked-view": "0.1.11",
-    "@react-navigation/native": "7.0.0",
-    "@react-navigation/stack": "7.0.0",
+    "@react-navigation/native": "^7.0.0",
+    "@react-navigation/stack": "^7.0.0",
     "base-64": "1.0.0",
     "body-parser": "^1.19.0",
     "expo": "^52.0.30",
+    "expo-router": "^4.0.17",
+    "expo-status-bar": "~2.0.1",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "express-validator": "^7.2.1",
@@ -35,7 +37,8 @@
     "react-native-keyboard-aware-scroll-view": "0.9.5",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "^4.6.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "^15.11.1",
     "react-native-web": "0.19.13",
     "serve-favicon": "^2.5.0",
     "simple-env-config": "^1.0.1",
