--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
+    "test": "jest",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
@@ -33,6 +34,7 @@
     "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
     "firebase": "^11.3.0",
+    "fs": "^0.0.1-security",
     "joi": "^17.13.3",
     "md5": "^2.3.0",
     "mongoose": "^8.10.0",
@@ -59,12 +61,15 @@
     "@babel/core": "7.26.0",
     "@babel/preset-env": "^7.26.7",
     "@babel/preset-react": "^7.26.3",
+    "@firebase/rules-unit-testing": "^4.0.1",
+    "@jest/globals": "^29.7.0",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "async": "^3.2.6",
     "babel-loader": "^9.2.1",
     "babel-preset-expo": "~12.0.0",
     "chai": "^5.1.2",
     "cross-env": "^7.0.3",
+    "jest": "^29.7.0",
     "mocha": "^10.8.2",
     "nodemon": "^3.1.9",
     "prettier": "^3.4.2",
