added newBet, notifications, and profile pages. also edited a bit of homepage

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/plugin-transform-runtime": "^7.25.9",
     "@react-native-community/cli": "15.1.0",
     "@react-native-community/masked-view": "0.1.11",
+    "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/stack": "^7.0.0",
     "base-64": "1.0.0",
