--- a/package.json
+++ b/package.json
@@ -15,20 +15,13 @@
     "@react-native-community/cli": "15.1.0",
     "@react-native-community/masked-view": "0.1.11",
     "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/native": "^7.0.0",
-    "@react-navigation/stack": "^7.0.0",
-    "base-64": "1.0.0",
-    "body-parser": "^1.19.0",
-    "expo": "^52.0.30",
-    "expo-router": "^4.0.17",
-    "expo-status-bar": "~2.0.1",
-    "express": "^4.17.1",
-    "express-session": "^1.17.1",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
     "base-64": "1.0.0",
     "body-parser": "^1.19.0",
     "expo": "^52.0.31",
+    "expo-image-picker": "^16.0.6",
+    "expo-permissions": "^14.4.0",
     "expo-router": "^4.0.17",
     "expo-status-bar": "~2.0.1",
     "express": "^4.21.2",
