--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.25.9",
     "@react-native-community/cli": "15.1.0",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-community/masked-view": "0.1.11",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
@@ -38,13 +40,18 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-keyboard-aware-scroll-view": "0.9.5",
+    "react-native-modal-datetime-picker": "^18.0.0",
+    "react-native-pell-rich-editor": "^1.9.0",
+    "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.11.1",
     "react-native-web": "0.19.13",
+    "react-native-webview": "^13.13.2",
     "serve-favicon": "^2.5.0",
     "simple-env-config": "^1.0.1",
     "styled-components": "^6.1.15",
