--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.11.1",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "0.19.13",
     "react-native-webview": "^13.13.2",
     "serve-favicon": "^2.5.0",
