--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.26.9",
+    "@expo/vector-icons": "^14.0.4",
     "@react-native-community/cli": "15.1.0",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-community/masked-view": "0.1.11",
