--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-firebase",
+  "name": "bragging-rightz-app",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -16,13 +16,13 @@
     "@react-native-community/cli": "15.1.0",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-community/masked-view": "0.1.11",
-    "@react-native-picker/picker": "^2.11.0",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
     "base-64": "1.0.0",
     "body-parser": "^1.19.0",
-    "expo": "^52.0.35",
+    "expo": "~52.0.36",
     "expo-image-picker": "^16.0.6",
     "expo-permissions": "^14.4.0",
     "expo-router": "^4.0.17",
@@ -51,10 +51,10 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-svg": "^15.11.1",
+    "react-native-svg": "15.8.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "0.19.13",
-    "react-native-webview": "^13.13.2",
+    "react-native-webview": "13.12.5",
     "serve-favicon": "^2.5.0",
     "simple-env-config": "^1.0.1",
     "styled-components": "^6.1.15",
@@ -67,7 +67,7 @@
     "@babel/preset-react": "^7.26.3",
     "@firebase/rules-unit-testing": "^4.0.1",
     "@jest/globals": "^29.7.0",
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "async": "^3.2.6",
     "babel-loader": "^9.2.1",
     "babel-preset-expo": "~12.0.0",
@@ -76,7 +76,7 @@
     "jest": "^29.7.0",
     "mocha": "^10.8.2",
     "nodemon": "^3.1.9",
-    "prettier": "^3.5.1",
+    "prettier": "^3.5.2",
     "react-router": "^6.4.3",
     "react-router-dom": "^6.29.0",
     "should": "^13.2.3",
