--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "mocha": "^10.8.2",
     "nodemon": "^3.1.9",
     "prettier": "^3.5.2",
+    "react-native-dotenv": "^3.4.11",
     "react-router": "^6.4.3",
     "react-router-dom": "^6.29.0",
     "should": "^13.2.3",
