--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "@react-navigation/stack": "^7.1.1",
     "base-64": "1.0.0",
     "body-parser": "^1.19.0",
-    "expo": "~52.0.36",
+    "expo": "~52.0.38",
     "expo-image-picker": "^16.0.6",
     "expo-permissions": "^14.4.0",
-    "expo-router": "^4.0.17",
+    "expo-router": "~4.0.19",
     "expo-status-bar": "~2.0.1",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
