--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "base-64": "1.0.0",
     "body-parser": "^1.19.0",
     "expo": "~52.0.38",
+    "expo-clipboard": "^7.0.1",
     "expo-image-picker": "^16.0.6",
     "expo-permissions": "^14.4.0",
     "expo-router": "~4.0.19",
