--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native-element-dropdown": "^2.12.4",
     "react-native-fontawesome": "^7.0.0",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-image-picker": "^8.2.0",
     "react-native-keyboard-aware-scroll-view": "0.9.5",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-pell-rich-editor": "^1.9.0",
