--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.26.9",
     "@expo/vector-icons": "^14.0.4",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@react-native-community/cli": "15.1.0",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-community/masked-view": "0.1.11",
@@ -33,6 +36,7 @@
     "express-validator": "^7.2.1",
     "firebase": "^11.3.1",
     "fs": "^0.0.1-security",
+    "ionicons": "^7.4.0",
     "joi": "^17.13.3",
     "md5": "^2.3.0",
     "mongoose": "^8.10.1",
