Onboarding flow + dependencies and added a help button in settings

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "pug": "^3.0.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.7",
+    "react-native": "^0.76.9",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-fontawesome": "^7.0.0",
     "react-native-gesture-handler": "~2.20.2",
@@ -58,6 +58,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "0.19.13",
     "react-native-webview": "13.12.5",
@@ -82,7 +83,7 @@
     "jest": "^29.7.0",
     "mocha": "^10.8.2",
     "nodemon": "^3.1.9",
-    "prettier": "^3.5.2",
+    "prettier": "^3.5.3",
     "react-native-dotenv": "^3.4.11",
     "react-router": "^6.4.3",
     "react-router-dom": "^6.29.0",
