--- a/.gitignore
+++ b/.gitignore
@@ -73,6 +73,8 @@ typings/
 # dotenv environment variables file
 .env
 .env.test
+.env.production
+.env.development
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
