--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-navigation/stack": "^7.1.1",
     "base-64": "1.0.0",
     "body-parser": "^1.19.0",
+    "eas": "^0.1.0",
     "expo": "~52.0.38",
     "expo-clipboard": "^7.0.1",
     "expo-image-picker": "^16.0.6",
