--- a/eas.json
+++ b/eas.json
@@ -36,9 +36,9 @@
   "submit": {
     "production": {
       "ios": {
-        "appleId": "${APPLE_ID}",
-        "ascAppId": "${ASC_APP_ID}",
-        "appleTeamId": "${APPLE_TEAM_ID}"
+        "appleId": "${process.env.APPLE_ID}",
+        "ascAppId": "${process.env.ASC_APP_ID}",
+        "appleTeamId": "${process.env.APPLE_TEAM_ID}"
       },
       "android": {
         "serviceAccountKeyPath": "./google-play-service-account.json",
