--- a/.gitignore
+++ b/.gitignore
@@ -73,6 +73,8 @@ typings/
 # dotenv environment variables file
 .env
 .env.test
+.env.production
+.env.development
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -154,11 +156,16 @@ build/
 .gradle
 local.properties
 *.iml
+*.hprof
+.cxx/
+*.keystore
+!debug.keystore
 
 # node.js
 #
 node_modules/
 npm-debug.log
+yarn-debug.log
 yarn-error.log
 
 # BUCK
@@ -186,4 +193,37 @@ buck-out/
 # Expo
 .expo/*
 web-build/
-.qodo
+dist/
+
+# Environment variables
+.env
+.env.*
+!.env.example
+
+# Firebase
+google-services.json
+GoogleService-Info.plist
+
+# Local Netlify folder
+.netlify
+
+# Testing
+coverage/
+
+# Production
+build/
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Misc
+*.log
+*.orig
