--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": "BraggingRightz",
     "slug": "bragging-rightz",
     "platforms": ["ios", "android", "web"],
-    "version": "1.0.0",
+    "version": "1.0.1",
     "orientation": "portrait",
     "icon": "./assets/images/bragging-rightz-app-icon.png",
     "userInterfaceStyle": "light",
@@ -22,13 +22,17 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.braggingrightz.app",
-      "buildNumber": "1",
+      "buildNumber": "3",
       "infoPlist": {
         "NSPhotoLibraryUsageDescription": "Allow BraggingRightz to access your photos to set your profile picture.",
         "NSCameraUsageDescription": "Allow BraggingRightz to access your camera to take profile pictures.",
         "NSMicrophoneUsageDescription": "Allow BraggingRightz to access your microphone",
         "ITSAppUsesNonExemptEncryption": false,
         "UIBackgroundModes": ["remote-notification"]
+      },
+      "usesNotifications": true,
+      "config": {
+        "usesNonExemptEncryption": false
       }
     },
     "android": {
@@ -37,7 +41,7 @@
         "foregroundImage": "./assets/images/bragging-rightz-app-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "versionCode": 1,
+      "versionCode": 2,
       "permissions": [
         "CAMERA",
         "READ_EXTERNAL_STORAGE",
@@ -67,6 +71,7 @@
     },
     "runtimeVersion": {
       "policy": "appVersion"
-    }
+    },
+    "jsEngine": "hermes"
   }
 }
