--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": "BraggingRightz",
     "slug": "bragging-rightz",
     "platforms": ["ios", "android", "web"],
-    "version": "1.0.1",
+    "version": "1.0.11",
     "orientation": "portrait",
     "icon": "./assets/images/bragging-rightz-app-icon.png",
     "userInterfaceStyle": "light",
@@ -16,19 +16,18 @@
       "fallbackToCacheTimeout": 0,
       "url": "https://u.expo.dev/0f4f9b57-d1bc-46fb-8ec5-2bf21045dcfb"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.braggingrightz.app",
-      "buildNumber": "3",
+      "buildNumber": "11",
       "infoPlist": {
         "NSPhotoLibraryUsageDescription": "Allow BraggingRightz to access your photos to set your profile picture.",
         "NSCameraUsageDescription": "Allow BraggingRightz to access your camera to take profile pictures.",
         "NSMicrophoneUsageDescription": "Allow BraggingRightz to access your microphone",
-        "ITSAppUsesNonExemptEncryption": false,
-        "UIBackgroundModes": ["remote-notification"]
+        "NSAppTransportSecurity": {
+          "NSAllowsArbitraryLoads": true
+        }
       },
       "usesNotifications": true,
       "config": {
@@ -41,11 +40,13 @@
         "foregroundImage": "./assets/images/bragging-rightz-app-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "versionCode": 2,
+      "versionCode": 4,
       "permissions": [
         "CAMERA",
         "READ_EXTERNAL_STORAGE",
-        "WRITE_EXTERNAL_STORAGE"
+        "WRITE_EXTERNAL_STORAGE",
+        "INTERNET",
+        "ACCESS_NETWORK_STATE"
       ]
     },
     "description": "Social betting app with friends",
@@ -71,7 +72,6 @@
     },
     "runtimeVersion": {
       "policy": "appVersion"
-    },
-    "jsEngine": "hermes"
+    }
   }
 }
